manifests/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webappoperacion
  namespace: alquimia
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/override-frontend-port: "8081"
    appgw.ingress.kubernetes.io/request-timeout: "300"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: webappoperacion
            port:
              number: 80
        pathType: Exact
